# billable

./: .gitignore  README.md  manifest.in  pyproject.toml
billable/: README.md  __init__.py  admin.py  api.py  conf.py  models.py  models_proxy.py  pyproject.toml  schemas.py  signals.py  urls.py
billable/management/: __init__.py
billable/management/commands/: __init__.py  migrate_identities.py
billable/migrations/: 0001_initial.py  0002_externalidentity.py  __init__.py
billable/services/: __init__.py  balance_service.py  customer_service.py  order_service.py  product_service.py  quota_service.py  transaction_service.py  user_product_service.py
billable/templates/admin/billable/customer/: product_report.html
billable/templates/admin/billable/offer/: change_list.html  import_form.html
billable/templates/admin/billable/product/: change_list.html  import_form.html
billable/tests/: conftest.py  test_advanced.py  test_api.py  test_customer_merge.py  test_customer_merge_api.py  test_exchange_errors.py  test_identity_logic.py  test_identity_resolution.py  test_migrate_identities.py  test_models.py  test_offer_export_import.py  test_product_export_import.py  test_referral_bonus.py  test_referral_signal_handler.py  test_refunds.py  test_repro_referral_identity.py  test_services.py  test_settings.py  test_sku_normalization.py
billable/tests/test_app/: __init__.py  apps.py  models.py  urls.py
doc/: architecture.md  reference.md
examples/n8n/: README.md  telegram_demo_workflow.json
