[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "billable"
version = "0.1.0"
authors = [
  { name="GoGoHero Team" },
]
description = "Metadata-driven billing and monetization system for Django"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "django-ninja>=1.1",
    "pydantic>=2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools]
package-dir = {"billable" = "."}
